--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-    /*font-size: 48px;*/
 }
 
 td {
@@ -11,4 +10,40 @@ td {
 caption {
     background-color: #ddd;
     font-weight: bold;
+}
+
+@media only screen
+and (orientation: landscape) {
+    td {
+        padding-left: 3px;
+        padding-right: 3px;
+    }
+
+    td.split {
+        display: table-cell;
+    }
+}
+
+@media only screen
+and (orientation: portrait) {
+    body {
+        font-size: 48px;
+    }
+
+    table {
+        width: 100%;
+    }
+
+    td {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+
+    td.split {
+        display: none;
+    }
+
+    td.name {
+        text-align: left;
+    }
 }
