lap times instead of splits

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -22,6 +22,10 @@ and (orientation: landscape) {
     td.split {
         display: table-cell;
     }
+
+    td.total {
+        font-weight: bold;
+    }
 }
 
 @media only screen
